okd/front-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ux-analyzer
  annotations:
    http://kubernetes.io/tls-acme:'true'
spec:
  rules:
    - host: ux-analyzer.okd.lifia.info.unlp.edu.ar
      http:
        paths:
          - path: /
            backend:
              serviceName: ux-analyzer
              servicePort: 3000
